# typhon

./: .gitignore  404.html  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  concepts.html  default.nix  flake.nix  hacking.html  installation.html  introduction.html  print.html  searchindex.js  searchindex.json  shell.nix  update.sh  usage.html
.github/: FUNDING.yml
.github/workflows/: doc.yml  nix.yml
actions/: default.nix
doc/: book.toml  shell.nix
doc/src/: SUMMARY.md  concepts.md  hacking.md  installation.md  introduction.md  usage.md
lib/: default.nix  dummyWebhook.nix  eachSystem.nix  mkAction.nix  mkGitJobsets.nix  mkProject.nix  systems.nix  utils.nix
lib/github/: default.nix  githubWebhook.nix  mkGithubJobsets.nix  mkGithubProject.nix  mkGithubStatus.nix
migrations/00000000000000_typhon/: up.sql
nix/: api-client-test.nix  check-api.nix  check-formatted.nix  devshell.nix  devshells.nix  doc.nix  inputs.nix  jobs.nix  nixpkgs.nix  outputs.nix  rust.nix  schemas.nix  server.nix  systems.nix  utils.nix  webapp.nix
nix/actions/: default.nix
nix/checks/: api.nix  default.nix  formatted.nix  lib.nix  nixos.nix
nix/lib/: default.nix  dummy.nix  dummyWebhook.nix  eachSystem.nix  match.nix  mkActionScript.nix  mkGitJobsets.nix  mkProject.nix  mkSimpleJobsets.nix  mkSimpleProject.nix  schemas.nix  steps.nix  systems.nix  utils.nix
nix/lib/builders/: default.nix  mkActionScript.nix  mkDummyAction.nix  mkProject.nix
nix/lib/cachix/: default.nix  mkPush.nix
nix/lib/common/: default.nix  mkJobsets.nix  mkProject.nix  mkStatus.nix  mkWebhook.nix
nix/lib/compose/: default.nix  match.nix  steps.nix
nix/lib/dummy/: default.nix  mkJobsets.nix  mkProject.nix  status.nix  webhook.nix
nix/lib/git/: config.nix  default.nix  mkJobsets.nix
nix/lib/gitea/: default.nix  giteaWebhook.nix  mkGiteaJobsets.nix  mkGiteaProject.nix  mkGiteaStatus.nix  mkProject.nix
nix/lib/github/: default.nix  githubWebhook.nix  mkGithubJobsets.nix  mkGithubProject.nix  mkGithubStatus.nix  mkPages.nix  mkProject.nix  mkPush.nix  mkPushResult.nix
nix/nixos/: test.nix  typhon.nix
nix/npm-nix/: default.nix  node-env.nix  node-packages.nix  regenerate.sh
nixos/: test.nix  typhon.nix
scripts/: build  format  pg_start  pg_stop  update  watch
src/: api.rs  builds.rs  error.rs  evaluations.rs  jobs.rs  jobsets.rs  lib.rs  main.rs  projects.rs  schema.rs  time.rs
templates/: homepage.html
tests/empty/: flake.nix
typhon/: Cargo.toml
typhon-api/: Cargo.toml
typhon-api-client-test/: Cargo.toml  shell.nix
typhon-api-client-test/src/: main.rs
typhon-core/: Cargo.toml
typhon-core-bis/: Cargo.toml
typhon-core/migrations/00000000000000_typhon/: down.sql  up.sql
typhon-core/src/: actions.rs  build_manager.rs  error.rs  evaluations.rs  fetchers.rs  jobs.rs  jobsets.rs  lib.rs  logs.rs  models.rs  nix.rs  projects.rs  refactor.rs  runs.rs  schema.rs  search.rs  task_manager.rs  tasks.rs
typhon-flake/: flake.nix
typhon-lib/: Cargo.toml  shell.nix
typhon-lib/migrations/00000000000000_typhon/: up.sql
typhon-lib/src/: actions.rs  build_manager.rs  builds.rs  error.rs  evaluations.rs  events.rs  gcroots.rs  jobs.rs  jobsets.rs  lib.rs  logs.rs  models.rs  nix.rs  projects.rs  runs.rs  schema.rs  search.rs  task_manager.rs  tasks.rs
typhon-server/src/: models.rs  tasks.rs
typhon-server/templates/: base.html  evaluation.html  jobset.html  project.html
typhon-types/: Cargo.toml  shell.nix
typhon-types/src/: helpers.rs  lib.rs  task_status.rs
typhon-webapp/: Cargo.toml  LICENSE-MIT  README.md  build.rs  index.html  index.scss  package-lock.json  package.json  shell.nix
typhon-webapp/assets/: package-lock.json  package.json
typhon-webapp/assets/npm-nix/: node-packages.nix
typhon-webapp/npm-nix/: node-env.nix  node-packages.nix  regenerate.sh
typhon-webapp/src/: app.rs  appurl.rs  build.rs  drv_log.rs  editable_text.rs  evaluation.rs  handle_request.rs  home.rs  job.rs  jobset.rs  lib.rs  login.rs  main.rs  prelude.rs  project.rs  requests.rs  resources.rs  routes.rs  secrets.rs  server_fn.rs  settings.rs  status.rs  streams.rs  timestamp.rs  utils.rs
typhon-webapp/src/components/: evaluations.rs  header.rs  log.rs  mod.rs  pagination.rs  status.rs  time_related.rs  trans.rs  uuid_label.rs
typhon-webapp/src/pages/: add_project.rs  dashboard.rs  drv.rs  error.rs  evaluation.rs  home.rs  job.rs  jobset.rs  login.rs  mod.rs  project.rs  projects.rs
typhon-webapp/src/views/: error.rs  header.rs  log.rs  mod.rs
typhon-webapp/src/widgets/: drv_log.rs  evaluation_list.rs  mod.rs
typhon-webapp/static/: index.html
typhon/api-client-test/: Cargo.toml
typhon/api-client-test/src/: main.rs
typhon/migrations/00000000000000_typhon/: down.sql  up.sql
typhon/src/: actions.rs  api.rs  build_manager.rs  builds.rs  error.rs  evaluations.rs  events.rs  gcroots.rs  jobs.rs  jobsets.rs  lib.rs  listeners.rs  logs.rs  main.rs  models.rs  nix.rs  projects.rs  runs.rs  schema.rs  task_manager.rs  tasks.rs  time.rs  web.rs
