[workspace]
members = [
  "typhon",
  "typhon-lib",
  "typhon-types",
  "typhon-webapp",
]
default-members = [
  "typhon"
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"

[[workspace.metadata.leptos]]
name = "typhon"
bin-package = "typhon"
lib-package = "typhon-webapp"
lib-features = ["hydrate"]
separate-front-target-dir = true

[workspace.dependencies]
typhon-lib = { path = "./typhon-lib" }
typhon-types = { path = "./typhon-types" }
typhon-webapp = { path = "./typhon-webapp" }
actix-files = "0.6"
actix-session = { version = "0.8", features = ["cookie-session"] }
actix-web = "4.4"
age = { version = "0.8", features = ["armor"] }
async-recursion = "1.0"
async-stream = "0.3"
async-trait = "0.1"
clap = { version = "4.4", features = ["derive", "env"] }
diesel = { version = "2.1", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2"] }
diesel_migrations = "2.1"
ext-trait = "1.0"
futures = "0.3"
futures-core = "0.3"
gloo-console = "0.3"
gloo-net = "0.4"
gloo-utils = "0.2"
js-sys = "0.3"
lazy_static = "1.4"
leptos = "0.5"
leptos_actix = "0.5"
leptos_router = "0.5"
log = "0.4"
once_cell = "1.18"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
sha256 = "1.4"
stderrlog = "0.5"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1.33", features = ["full"] }
tokio-stream = "0.1"
uuid = { version = "1.6", features = ["v7", "serde"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Navigator", "Clipboard", "ReadableStream", "Response"] }
