[workspace]
members = [
  "typhon",
  "typhon-lib",
  "typhon-types",
  "typhon-webapp",
]
default-members = [
  "typhon"
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"

[[workspace.metadata.leptos]]
name = "typhon"
bin-package = "typhon"
lib-package = "typhon-webapp"
lib-features = ["hydrate"]
separate-front-target-dir = true
assets-dir = "typhon-webapp/assets"

[workspace.dependencies]
typhon-lib = { path = "./typhon-lib" }
typhon-types = { path = "./typhon-types" }
typhon-webapp = { path = "./typhon-webapp" }
actix-files = "0.6"
actix-session = { version = "0.8", features = ["cookie-session"] }
actix-web = "4.4"
age = { version = "0.8", features = ["armor"] }
async-recursion = "1.0"
async-stream = "0.3"
async-trait = "0.1"
clap = { version = "4.4", features = ["derive", "env"] }
diesel = { version = "2.1", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2"] }
diesel_migrations = "2.1"
either = "1.9"
ext-trait = "1.0"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
gloo-console = "0.3"
gloo-net = "0.4"
gloo-storage = "0.3"
gloo-utils = "0.2"
hex = "0.4"
im = "15.1"
itertools = "0.11"
js-sys = "0.3"
lazy_static = "1.4"
leptos = "0.5"
leptos_actix = "0.5"
leptos_icons = "0.1"
leptos_meta = "0.5"
leptos_router = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-web = "0.1"
once_cell = "1.18"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json = "1.0"
serde_repr = "0.1"
sha256 = "1.4"
stderrlog = "0.5"
stylers = "1.0.0-alpha"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1.33", features = ["full"] }
tokio-stream = "0.1"
urlencoding = "2.1"
uuid = { version = "1.6", features = ["v7", "serde"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-streams = "0.3"
web-sys = { version = "0.3", features = ["Navigator", "Clipboard", "ReadableStream", "Response", "TextDecoder"] }
