[package]
name = "typhon-types"
version.workspace = true
edition.workspace = true

[dependencies]
derive_more.workspace = true
lazy_static.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with = { workspace = true, features = ["json"] }
strum = { workspace = true, features = ["derive"] }
time.workspace = true
uuid.workspace = true
