[package]
name = "typhon-webapp"
version.workspace = true
edition.workspace = true

[lib]
crate-type = [ "cdylib", "rlib" ]

[dependencies]
typhon-lib = { workspace = true, optional = true }
typhon-types.workspace = true
actix-session = { workspace = true, optional = true }
async-stream.workspace = true
futures-core.workspace = true
gloo-console.workspace = true
gloo-net.workspace = true
gloo-utils.workspace = true
js-sys.workspace = true
leptos = { workspace = true, features = ["nightly"] }
leptos_actix = { workspace = true, optional = true }
leptos_router.workspace = true
serde.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "leptos_router/hydrate",
]
ssr = [
    "dep:typhon-lib",
    "dep:actix-session",
    "dep:leptos_actix",
    "leptos/ssr",
    "leptos_router/ssr",
]
