[package]
name = "typhon-webapp"
version.workspace = true
edition.workspace = true

[lib]
crate-type = [ "cdylib", "rlib" ]

[dependencies]
typhon-lib = { workspace = true, optional = true }
typhon-types.workspace = true
actix-session = { workspace = true, optional = true }
async-stream.workspace = true
futures-core.workspace = true
gloo-console = { workspace = true, optional = true }
gloo-net = { workspace = true, optional = true }
gloo-utils = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
leptos = { workspace = true, features = ["nightly"] }
leptos_actix = { workspace = true, optional = true }
leptos_router.workspace = true
serde.workspace = true
serde_json = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }

[features]
default = []
hydrate = [
    "dep:gloo-console",
    "dep:gloo-net",
    "dep:gloo-utils",
    "dep:js-sys",
    "dep:serde_json",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
    "leptos/hydrate",
    "leptos_router/hydrate",
]
ssr = [
    "dep:typhon-lib",
    "dep:actix-session",
    "dep:leptos_actix",
    "leptos/ssr",
    "leptos_router/ssr",
]
