[package]
name = "typhon"
version.workspace = true
edition.workspace = true

[dependencies]
typhon-lib.workspace = true
typhon-types.workspace = true
actix-cors.workspace = true
actix-files.workspace = true
actix-web.workspace = true
clap.workspace = true
futures-core.workspace = true
futures.workspace = true
serde_json.workspace = true
stderrlog.workspace = true
tokio.workspace = true
