[package]
name = "typhon"
version.workspace = true
edition.workspace = true

[dependencies]
typhon-core.workspace = true
typhon-types.workspace = true
typhon-webapp = { workspace = true, features = ["ssr"] }
actix-files.workspace = true
actix-session.workspace = true
actix-web.workspace = true
clap.workspace = true
futures-core.workspace = true
futures.workspace = true
leptos = { workspace = true, features = ["ssr"] }
leptos_actix.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
uuid.workspace = true
hex.workspace = true
